<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/head_style" />

    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp" />

    <include layout="@layout/step_progressbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height_40"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_activity_input"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="姓        名"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

        <EditText
            android:text="张三"
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:hint="@string/input_real_name"
            android:textSize="@dimen/TextSize_14" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height_40"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/register_activity_input"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/id_number"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

        <EditText
            android:text="330382199410184737"
            android:id="@+id/etIDCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:hint="@string/input_real_id"
            android:textSize="@dimen/TextSize_14" />

    </LinearLayout>

    <Button
        android:id="@+id/btAuthentication"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height_40"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/register_activity_login2"
        android:text="@string/authentication"
        android:textColor="@color/colorText_white"
        android:textSize="@dimen/TextSize_15" />
</LinearLayout>
