<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background_white"
    android:orientation="vertical">

    <include layout="@layout/head_style02" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <com.hztuen.shanqi.widget.CustomTextView
        android:onClick="layoutClick"
        android:id="@+id/tvMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0_0"
        android:textColor="@color/colorText_red"
        android:textSize="@dimen/TextSize_65" />

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="layoutClick"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/fare_balance"
        android:textColor="@color/colorText_black"
        android:textSize="@dimen/TextSize_18" />

    <View
        android:onClick="layoutClick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height_40"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/register_activity_input2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/other_amount"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

        <EditText
            android:id="@+id/etMoney"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/input_money"

            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:textSize="@dimen/TextSize_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height_40"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/money_bg_02"
            android:gravity="center"
            android:text="@string/¥_10"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

        <TextView
            android:id="@+id/tv02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/money_bg_02"
            android:gravity="center"
            android:text="@string/¥_20"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

        <TextView
            android:id="@+id/tv03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/money_bg_02"
            android:gravity="center"
            android:text="@string/¥_30"
            android:textColor="@color/colorText_gray_2"
            android:textSize="@dimen/TextSize_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:onClick="aliPay"
                android:src="@mipmap/a5_bat_zfb_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/ali_pay"
                android:textColor="@color/colorText_gray_2"
                android:textSize="@dimen/TextSize_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:onClick="weChatPay"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/a5_bat_wzf_nor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/wechat_pay"
                android:textColor="@color/colorText_gray_2"
                android:textSize="@dimen/TextSize_14" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit"
            android:textSize="@dimen/TextSize_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/shu"
            android:textColor="@color/colorText_red"
            android:textSize="@dimen/TextSize_14" />

        <TextView
            android:id="@+id/tvDeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.01元"
            android:textColor="@color/colorText_black"
            android:textSize="@dimen/TextSize_14" />

        <TextView
            android:id="@+id/tvGetMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/money_bg_01"
            android:onClick="myClick"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:text="@string/extract_deposit"
            android:textColor="@color/colorText_red"
            android:textSize="@dimen/TextSize_12" />
    </LinearLayout>
</LinearLayout>